[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "nfip"
version = "0.1.6"
description = "A Python package for creating subscription Streamlit apps"
authors = [
    {name = "rmk", email = "emk@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "stripe",
    "httpx-oauth",
    "pyjwt",
    "streamlit>=1.27.0",
]
requires-python = ">=3.8.0"
